force-app/main/default/objects/Activity/fields/Call__c.field-meta.xml
<CustomField>
    <fullName>Call__c</fullName>
    <defaultValue>&quot;First Call&quot;</defaultValue>
    <label>Call  Count</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Call</fullName>
                <default>true</default>
                <label>First Call</label>
            </value>
            <value>
                <fullName>Follow-up Call</fullName>
            </value>
            <value>
                <fullName>First Call to Contact person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>