force-app/main/default/objects/Activity/fields/Next_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Call_Date__c</fullName>
    <defaultValue>(Today() + 7)</defaultValue>
    <label>Next Call Date</label>
    <type>Date</type>
</CustomField>