force-app/main/default/objects/Activity/fields/Type_of_Call__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Call__c</fullName>
    <defaultValue>&quot;Meeting in Person&quot;</defaultValue>
    <label>Type of Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Meeting in Person</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>